[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Winzone.gd" type="Script" id=1]
[ext_resource path="res://assets/Tilemaps/images/monochrome_tilemap_transparent_56.png" type="Texture" id=2]
[ext_resource path="res://assets/Tilemaps/Opened_Door.png" type="Texture" id=3]
[ext_resource path="res://assets/Tilemaps/images/monochrome_tilemap_transparent_54.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Open",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Opening",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 9 )

[node name="Winzone" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "Closed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Winzone_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Winzone_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
